fix login color

--- a/resources/scss/partials/login.scss
+++ b/resources/scss/partials/login.scss
@@ -159,9 +159,9 @@ form {
 }
 
 .overlay {
-	background: #FF416C;
-	background: -webkit-linear-gradient(to right, #FF4B2B, #FF416C);
-	background: linear-gradient(to right, #FF4B2B, #FF416C);
+	background: #9a34ee;
+	background: -webkit-linear-gradient(to right, #e6a01e, #64219b);
+	background: linear-gradient(to right, #e6a01e, #64219b);
 	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: 0 0;
@@ -242,7 +242,7 @@ footer p {
 }
 
 footer i {
-    color: red;
+    color: rgb(230, 151, 34);
 }
 
 footer a {
