--- a/resources/scss/partials/header.scss
+++ b/resources/scss/partials/header.scss
@@ -11,7 +11,7 @@ body{
 
     width: 100vw;
     height: 100px;
-    background-color: var(--bluelightMario);
+    background: var(--card-dashboard);
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 25%);
     display: flex;
     align-items: center;
@@ -57,8 +57,6 @@ body{
     color: #102447;
     padding: 5px 0;
     transition: all .1s ease;
-    border-bottom: 0px solid #64d6f4;
-    border-top: 0px solid #64d6f4;
     cursor: pointer;
 }
 
@@ -69,19 +67,21 @@ body{
 }
 
 .header .item-button a{
-
-    background: var(--greenMario);
     width: 100%;
     height: 50px;
-    padding: 15px;
     display: flex;
+    padding: 20px;
     justify-content: center;
     align-items: center;
-    border-radius: 20px;
-    font-size: 16px;
+    border-radius: 10px;
+    font-size: 18px;
     font-weight: 600;
     color: #fff;
     transition: all .5s ease;
+}
+
+.header .item-button a:hover{
+    color: var(--icon-orange);
 }
 
 .header .mobile-toggler{
