modify style edit and create

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -43,3 +43,6 @@ $fa-font-path: "../fonts/webfonts" !default;
 .pagination .page-item a {
     color: red;
 }
+// label{
+//     font-size: 20px;
+// }
