--- a/resources/scss/partials/sidebar.scss
+++ b/resources/scss/partials/sidebar.scss
@@ -98,3 +98,18 @@
       margin-left: -15rem;
     }
   }
+
+  @media (min-width: 562px) {
+    #sidebar-wrapper {
+      margin-left: 0;
+    }
+
+    #page-content-wrapper {
+      min-width: 0;
+      width: 100%;
+    }
+
+    #wrapper.toggled #sidebar-wrapper {
+      margin-left: -15rem;
+    }
+  }
