--- a/resources/scss/partials/sidebar.scss
+++ b/resources/scss/partials/sidebar.scss
@@ -36,7 +36,7 @@
 }
 
 #sidebar-wrapper {
-    min-height: 100vh;
+    min-height: calc(100vh - 100px);
     margin-left: -15rem;
     -webkit-transition: margin 0.25s ease-out;
     -moz-transition: margin 0.25s ease-out;
