--- a/resources/scss/partials/show.scss
+++ b/resources/scss/partials/show.scss
@@ -104,7 +104,7 @@ label {
   font-size: 18px;
   display: block;
   float: left;
-  width: 20%;
+  width: calc(100% / 3);
   padding: 1.5em;
   color: #757575;
   cursor: pointer;
@@ -115,9 +115,7 @@ label {
 
 #tab1:checked ~ #content1,
 #tab2:checked ~ #content2,
-#tab3:checked ~ #content3,
-#tab4:checked ~ #content4,
-#tab5:checked ~ #content5 {
+#tab3:checked ~ #content3 {
   display: block;
   padding: 20px;
   background: #fff;
