--- a/resources/scss/partials/show.scss
+++ b/resources/scss/partials/show.scss
@@ -77,6 +77,9 @@ h1 {
 
 .CPM{
     overflow-y: auto;
+    margin-right: 0;
+    margin-left: 0;
+    min-width: calc(100vw - 150px) !important;
 }
 
 a {
