add register message and style

--- a/resources/scss/partials/login.scss
+++ b/resources/scss/partials/login.scss
@@ -47,6 +47,16 @@ a {
     margin: 15px 0;
 }
 
+.advertise{
+    font-size: 12px;
+    color: grey;
+}
+
+.advertise-2{
+    font-size: 18px;
+    color: grey;
+}
+
 button {
     border-radius: 20px;
     border: 1px solid #ff4b2b;
