--- a/resources/scss/partials/login.scss
+++ b/resources/scss/partials/login.scss
@@ -175,8 +175,8 @@ form {
 
 .overlay {
     background: #9a34ee;
-    background: -webkit-linear-gradient(to right, #e6a01e, #64219b);
-    background: linear-gradient(to right, #e6a01e, #64219b);
+    background: -webkit-linear-gradient(to right, #2d2d2d, #f88000);
+    background: linear-gradient(to right, #2d2d2d, #f88000);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: 0 0;
